@startuml
Skinparam groupInheritance 2
skinparam backgroundColor #CFEFFA
namespace Commands #FFFEDB {
}
namespace Products #FFFEDB {
}
namespace Users #FFFEDB {
}
nameSpace Info  #FFAA99{

}
note top of Info
<size:9>Aquí se guardan archivos que poco tienen que ver con el programa en si</size>
<size:9>No creo que se deba representar en el diagrama pero es más visual</size>
end note

Class Utilities{
}

Info -[hidden]- Utilities

Class App {}
class CLI {}
class Products.Product  {
    #id: int
    #name:str
    #price: double
    --
    ..getters/setters..
    +getPrecio()
    +setPrice(double precio)
    +getNombre()
    +setName(String nombre)
    +getId()
    ..Otros metodos..
    +equals(Product product)
    +toString()
    +TotalPrice()
}

class ProductHandler {
-products:arrayList<Product>
}

class Ticket{
-products:arrayList<Product>
}

enum State{
EMPTY
ACTIVE
CLOSED
}

Ticket ..>State

class TicketHandler {
-ticket : ArrayList<Ticket>
}

Product --o Ticket
TicketHandler o-- Ticket



class Products.ProductBasic{
    -id: int
    -name:str
    -category:Category
    -price:double
    --
    +toString()
    +TotalPrice()
    ..getters/setters..
    +getCategoria()
    +setCategory(categoria)
}

enum Products.Category {
MERCH
ELECTRONICA
PAPELERIA
ROPA
LIBRO
}
ProductBasic -->Category
Product <|-- ProductBasic

class Products.ProductPers{
    -texts:ArrayList<Str>
    -int maxTextos

    +addTexto(String texto)
    +toString()
    TotalPrice()
    ..getters..
    +getTextos()
    +getMaxTextos()

}
ProductBasic <|--  ProductPers

class Products.CampusMeals{
-maxParticipantes:100
-MINTIME:72
}


class Products.Meetings{
    -int maxParticipantes:100
    -int minTime:12
    -String dateOfEnd
    --
    ..getters..
    +getMaxParticipantes()
    +getMinTime()
    ..Otros..
    +toString()
    +TotalPrice()
}

Product <|-- CampusMeals
Product <|-- Meetings

class UserHandler{
-Users:ArrayList<User>
}

abstract class Users.User<<abstract>> {
}
UserHandler o-- User

class Users.Client {
-id
-name
-dni
-mail
-cajero:Cajero
}

User <|-- Client

class Users.Cashier{
-code:str
-name
-mail
}
User <|-- Cashier

Cashier o-- Ticket
Client o-- Ticket


abstract class Commands.Command <<abstract>>{
#name:Str
+{abstract}apply(args:String[])
}

class Commands.CommandProd{
+ apply(args : String[])
}

class Commands.CommandsForProd.CommandProdEx{
 + apply(args : String[])
}

CommandProd *-- CommandProdEx

App *-- CommandProd


class Commands.CommandTicket{
+ apply(args : String[])
}

class Commands.CommandsForTicket.CommandTicketEx{
 + apply(args : String[])
}


CommandTicket *-- CommandTicketEx
App *-[norank]- CommandTicket

class Commands.CommandUser{
+ apply(args : String[])
}

class Commands.CommandsForUser.CommandUserEx{
 + apply(args : String[])
}



CommandUser *-- CommandUserEx
App *-[norank]- CommandUser

App *-- CLI

App *-- Command
Command <|-- CommandProdEx
Command <|-- CommandTicketEx
Command <|-- CommandUserEx

App --> ProductHandler

ProductHandler --o Product


App --> TicketHandler
App --> UserHandler

CommandUserEx .[norank].> UserHandler
CommandProdEx .[norank].> ProductHandler
CommandTicketEx .[norank].> TicketHandler

@enduml